--- a/css/default.css
+++ b/css/default.css
@@ -1,6 +1,7 @@
 .i18n_border{
     border: 1px black solid;
     padding: 0px 5px 0px 5px;
+    font-size: 12px;
 }
 .i18n_textleft{
     text-align: left;
@@ -13,4 +14,22 @@
 }
 .i18n_th{
     background-color: darkgrey;
+    font-size: 14px;
+}
+
+.i18n_border textarea{
+    width: 350px;
+    height: 100px;
+}
+
+.i18n_border input{
+    width: 350px;
+}
+
+.i18n_info {
+    background-color: greenyellow;
+}
+
+.i18n_warn {
+    background-color: gold;
 }
